added About Me section

--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
     <nav>
         <ul>
             <li>
-                <a href="About Me">About Me</a>
+                <a href="#About Me">About Me</a>
             </li>
             <li>
-                <a href="Portfolio">Portfolio</a>
+                <a href="#Portfolio">Portfolio</a>
             </li>
             <li>
-                <a href="Contact Me">Contact Me</a>
+                <a href="#Contact Me">Contact Me</a>
             </li>
         </ul>
     </nav>
@@ -41,6 +41,14 @@
         </div>
 
 <div class="about-me">
+    <h2>About Me</h1>
+    <a name="About Me"></a>
+    <img class="headshot" src="./assets/images/UMiami.jpeg" height="400px" alt="A headshot of the page creator">
+    <p>
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsum harum soluta, facilis architecto animi consequuntur quia itaque id qui voluptate dolor aperiam ratione nisi vero nobis reiciendis dicta, cupiditate ea? Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur odio minima doloribus rem iste totam. Qui dolores iste, consequatur ea tempora vitae aperiam iusto ab!
+
+
+    </p>
 
 
 
