--- a/index.html
+++ b/index.html
@@ -41,19 +41,28 @@
         </div>
 
 <div class="about-me">
-    <h2>About Me</h1>
+    <h2>About Me</h2>
     <a name="About Me"></a>
-    <img class="headshot" src="./assets/images/UMiami.jpeg" height="400px" alt="A headshot of the page creator">
+    <img class="headshot" src="./assets/images/UMiami.jpeg" alt="a headshot of the page creator">
     <p>
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsum harum soluta, facilis architecto animi consequuntur quia itaque id qui voluptate dolor aperiam ratione nisi vero nobis reiciendis dicta, cupiditate ea? Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur odio minima doloribus rem iste totam. Qui dolores iste, consequatur ea tempora vitae aperiam iusto ab!
-
-
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsum harum soluta, facilis architecto animi consequuntur quia itaque id qui voluptate dolor aperiam ratione nisi vero nobis reiciendis dicta, cupiditate ea? Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur odio minima doloribus rem iste totam. Qui dolores iste, consequatur ea tempora vitae aperiam iusto ab! Lorem ipsum dolor sit amet, consectetur adipisicing elit. A illum ut alias accusantium quos, ea modi est hic eum excepturi amet eos. Itaque facilis inventore autem ipsam! Aut dolores quisquam, nesciunt obcaecati quia officiis fugit asperiores quidem eos quaerat tenetur amet totam cum vero ratione maxime nam dolorem iure voluptatum.
     </p>
-
-
-
 </div>
     
+<div class="portfolio">
+    <h2>Portfolio</h2>
+    <a name="Portfolio"></a>
     
+    <img src="./assets/images/runbuddybg.png" class="runbg">
+    <div id="container">
+    <img src="./assets/images/runbuddy.png" class="run1"> 
+    <img src="./assets/images/runbuddy2.png" class="run2"> 
+    <img src="./assets/images/runbuddy3.png" class="run3"> 
+    </div>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab maiores provident, odio veniam perferendis dolorem hic repudiandae minima reiciendis excepturi, ullam alias nihil modi vel quidem. Beatae tempore expedita architecto culpa maiores dolore eius dolor libero deserunt dolorum perferendis ipsa quae inventore blanditiis, molestias debitis earum et possimus animi mollitia.</p>
+</div>
+
+
+
 </body>
 </html>
