--- a/index.html
+++ b/index.html
@@ -53,16 +53,28 @@
     <h2>Portfolio</h2>
     <a name="Portfolio"></a>
     
-    <img src="./assets/images/runbuddybg.png" class="runbg">
+    <a href="https://soflo83.github.io/run-buddy"> <img src="./assets/images/runbuddybg.png" class="runbg"></a>
     <div id="container">
-    <img src="./assets/images/runbuddy.png" class="run1"> 
-    <img src="./assets/images/runbuddy2.png" class="run2"> 
-    <img src="./assets/images/runbuddy3.png" class="run3"> 
+    <a href="https://soflo83.github.io/run-buddy/#what-we-do"> <img src="./assets/images/runbuddy.png" class="run1"></a>
+    <a href="https://soflo83.github.io/run-buddy/#your-trainers"> <img src="./assets/images/runbuddy2.png" class="run2"></a>
+    <a href="https://soflo83.github.io/run-buddy/#reach-out"> <img src="./assets/images/runbuddy3.png" class="run3"></a>
     </div>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab maiores provident, odio veniam perferendis dolorem hic repudiandae minima reiciendis excepturi, ullam alias nihil modi vel quidem. Beatae tempore expedita architecto culpa maiores dolore eius dolor libero deserunt dolorum perferendis ipsa quae inventore blanditiis, molestias debitis earum et possimus animi mollitia.</p>
 </div>
 
+<div class="contact">
+    <h2>Contact Me</h2>
+    <a name="Contact Me"></a>
 
+    <p>Please feel free to reach out with any questions, comments, or inquiries.</p>
+
+    <p class="mail">
+        Email: <a href="mailto:brendan@fakemail.com">brendan@fakemail.com</a>
+        <br>
+        <br>
+        Phone: <a href="tel:239-555-5555">239.555.9824</a>
+        </p>
+    
 
 </body>
 </html>
