--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <a href="#Portfolio">Portfolio</a>
             </li>
             <li>
-                <a href="#Contact Me">Contact Me</a>
+                <a href="#Contact Me" class="cm">Contact Me</a>
             </li>
         </ul>
     </nav>
